--- a/src/scss/modules/_service_lists.scss
+++ b/src/scss/modules/_service_lists.scss
@@ -1,9 +1,15 @@
 .services {
-	h3:first-of-type {
-		@include hxlarge($hFontM);
+	h3 {
+		font-size: 26px;
+		font-family: $hFontM;
+		line-height: 36px;
+		@include breakpoint($tiny) {
+			font-size: $fontXLarge;
+			line-height: 1.3*$fontXLarge;
+		}			
 	}
 	h3:last-of-type {
-		@include hxlarge($hFontBI);
+		font-family: $hFontBI;
 	}
 	h3 {
 		margin-bottom: 5px;
