--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5868,25 +5868,18 @@ footer .footer-divider {
 .service-quote {
   position: relative; }
 
-.services h3:first-of-type {
+.services h3 {
+  font-size: 26px;
   font-family: "Copernicus-Medium";
-  font-size: 18px;
-  line-height: 27.9px; }
+  line-height: 36px; }
 
-@media (min-width: 992px) {
-  .services h3:first-of-type {
+@media (min-width: 480px) {
+  .services h3 {
     font-size: 34px;
-    line-height: 52.7px; } }
+    line-height: 44.2px; } }
 
 .services h3:last-of-type {
-  font-family: "Copernicus-BookItalic";
-  font-size: 18px;
-  line-height: 27.9px; }
-
-@media (min-width: 992px) {
-  .services h3:last-of-type {
-    font-size: 34px;
-    line-height: 52.7px; } }
+  font-family: "Copernicus-BookItalic"; }
 
 .services h3 {
   margin-bottom: 5px;
