--- a/src/scss/modules/_service_lists.scss
+++ b/src/scss/modules/_service_lists.scss
@@ -3,7 +3,7 @@
 		font-size: 26px;
 		font-family: $hFontM;
 		line-height: 36px;
-		@include breakpoint($small) {
+		@include breakpoint($medium) {
 			font-size: $fontXLarge;
 			line-height: 1.3*$fontXLarge;
 		}			
