--- a/src/scss/modules/_service_lists.scss
+++ b/src/scss/modules/_service_lists.scss
@@ -1,8 +1,8 @@
 .services {
 	h3 {
-		font-size: 26px;
+		font-size: 24px;
 		font-family: $hFontM;
-		line-height: 36px;
+		line-height: 34x;
 		@include breakpoint($medium) {
 			font-size: $fontXLarge;
 			line-height: 1.3*$fontXLarge;
