--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5869,9 +5869,9 @@ footer .footer-divider {
   position: relative; }
 
 .services h3 {
-  font-size: 26px;
+  font-size: 24px;
   font-family: "Copernicus-Medium";
-  line-height: 36px; }
+  line-height: 34x; }
 
 @media (min-width: 992px) {
   .services h3 {
