--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5015,7 +5015,7 @@ footer .footer-divider {
   z-index: 10;
   position: relative; }
 
-.hero.dark h1, .hero.dark h2, .hero.dark h3, .hero.dark h4 {
+.hero.dark h1, .hero.dark h2, .hero.dark h3, .hero.dark h4, .hero.dark h5 {
   color: #25282A; }
 
 .hero a {
