property tile cleanup

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,6 +60,7 @@
 @import 'modules/_faq_list.scss';
 @import 'modules/_featured_post.scss';
 @import 'modules/_social.scss';
+@import 'modules/_no_hero.scss';
 
 
 
