--- a/src/scss/modules/_forms.scss
+++ b/src/scss/modules/_forms.scss
@@ -1,6 +1,6 @@
 .input-clear {
 	@include clearfix;
-	input {
+	.form {
 		@include breakpoint($medium) {
 			@include gallery(1 of 2 after .025 break);
 		}
