--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -1903,7 +1903,7 @@ section {
   padding-top: 100%;
   position: relative; }
 
-.faq {
+.no-hero {
   margin-top: 0;
   padding-top: 0;
   box-sizing: border-box;
@@ -1911,18 +1911,18 @@ section {
   float: left; }
 
 @media (min-width: 992px) {
-  .faq main {
+  .no-hero main {
     box-sizing: border-box;
     width: 66.66667%;
     float: left; } }
 
-.faq aside {
+.no-hero aside {
   box-sizing: border-box;
   width: 100%;
   float: left; }
 
 @media (min-width: 992px) {
-  .faq aside {
+  .no-hero aside {
     box-sizing: border-box;
     width: 25%;
     float: right; } }
@@ -5101,15 +5101,15 @@ footer .footer-divider {
   clear: both; }
 
 @media (min-width: 992px) {
-  .input-clear input {
+  .input-clear .form {
     width: 49.38272%;
     float: left; }
-  .input-clear input:nth-child(2n + 1) {
+  .input-clear .form:nth-child(2n + 1) {
     margin-left: 0;
     margin-right: -100%;
     clear: both;
     margin-left: 0; }
-  .input-clear input:nth-child(2n + 2) {
+  .input-clear .form:nth-child(2n + 2) {
     margin-left: 50.61728%;
     margin-right: -100%;
     clear: none; } }
@@ -5332,7 +5332,7 @@ footer .footer-divider {
   clear: both; }
 
 .circle-leader .circle {
-  margin: 0 auto;
+  margin: 0 auto 18px;
   box-sizing: border-box;
   border-radius: 50%;
   height: 80px;
@@ -6099,9 +6099,15 @@ section.faq {
 
 .social i {
   position: relative;
+  font-size: 18px;
+  position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%); }
+
+.social i.fa-envelope {
+  font-size: 15px;
+  top: 44%; }
 
 .social.left-align a {
   margin-right: 5px; }
@@ -6111,10 +6117,6 @@ section.faq {
 
 .social.right-align a {
   margin-left: 5px; }
-
-.social i {
-  position: relative;
-  font-size: 18px; }
 
 .social.gray {
   color: #999999; }
@@ -6182,3 +6184,21 @@ section.faq {
 
 .social.footer i {
   line-height: 32px; }
+
+.no-hero-header {
+  margin-top: 78px;
+  padding: 30px 0;
+  margin-bottom: 60px; }
+
+.no-hero-header .container {
+  color: white; }
+
+.no-hero-header.faq-header {
+  background-color: #009B77; }
+
+.no-hero-header.terms-header {
+  background-color: #a0a0a0; }
+
+.no-hero {
+  margin-top: 0;
+  padding-top: 0; }
