--- a/statamic/_themes/main/templates/faq.html
+++ b/statamic/_themes/main/templates/faq.html
@@ -1,11 +1,11 @@
 
-<div class="faq-header">
+<div class="no-hero-header faq-header">
 	<div class="container"><h2>Frequently Asked Questions</h2></div>
 </div>
 
-<section class="leading faq">
+<section class="no-hero faq">
 	<div class="container">
-		<main class="faq-main">
+		<main>
 
 			<div class="costs">
 				<h2>Closing Costs For Sellers</h2>
