--- a/statamic/_themes/main/templates/terms.html
+++ b/statamic/_themes/main/templates/terms.html
@@ -1,6 +1,10 @@
-<section class="leading">
+
+<div class="no-hero-header terms-header">
+	<div class="container"><h2>Terms &amp; Conditions</h2></div>
+</div>
+
+<section class="no-hero">
 	<div class="container">
-		<h3>Terms &amp; Conditions</h3>
-		{{ terms }}
+		<main>{{ terms }}</main>
 	</div>
 </section>
