--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -7,7 +7,7 @@
 // }
 
 .btn-contact {
-	@include breakpoint($small) {
+	@include breakpoint($medium) {
 		padding: 6px 10px;
 		border: 1px solid $text-green;
 		border-radius: 2px;
