--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -3,7 +3,7 @@
   <div class="container nav-container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#primary-nav" aria-expanded="false">
-        <i class="fa fa-bars fa-lg"></i>
+        <div class="patty"></div>
       </button>
       <a class="navbar-brand" href="{{ homepage }}">{{ theme:partial src="svg/logo" }}</a>
     </div>
