--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -54,7 +54,52 @@ header {
 			}
 		}
 	}
-	@include breakpoint($small) {
+	button {
+		transition: all 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
+		.patty {
+			display: block;
+			width: 24px;
+			height: 3px;
+			margin: 10px 0;
+			transition: all 0.3s;
+			background: none;
+			&:before, &:after {
+		    content: '';
+		    display: block;
+		    width: 24px;
+		    height: 3px;
+		    background: $dark-gray;
+		    position: absolute;
+		    z-index: -1;
+		    transition: all 0.3s;
+			}
+			&:before {
+				transform: rotate(45deg);
+			}
+			&:after {
+				transform: rotate(-45deg);
+			}
+		}
+
+		&.collapsed {
+			.patty {
+				background-color: $dark-gray;
+				&:before {
+					top: 10px;
+					transform: rotate(0);
+				}
+				&:after {
+					bottom: 10px;
+					transform: rotate(0);
+				}
+			}
+		}	
+	}
+
+	@include breakpoint($medium) {
+		.patty {
+			display: none;
+		}
 		.navbar-right {
 			padding-right: 15px;
 		}
