--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -1,4 +1,4 @@
-{{ theme:partial src="hero" }}
+{{ theme:partial src="hero_mask" }}
 <nav id="scroll-spy-nav" class="secondary-nav">
 	<ul class="nav" role="tablist">
 		<li><a class="scroll smooth" href="#individuals" >Individuals &amp; Families</a></li>
