--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -24,7 +24,7 @@
 				display: block;
 			}
 		}
-		@include breakpoint($small) {
+		@include breakpoint($tiny) {
 			@include span (7 of 12 after);
 			.entry {
 				margin-bottom: $bPadding;
